fixes controls on smaller viewports

--- a/src/styles/_queries.scss
+++ b/src/styles/_queries.scss
@@ -4,8 +4,8 @@
   }
 }
 
-@mixin mobile {
-  @media (pointer: coarse) {
+@mixin mobile-only {
+  @media (min-width: $md) {
     @content;
   }
 }
