--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -30,7 +30,7 @@
     text-align: right;
     // display: none;
 
-    @include tablet {
+    @include mobile-only {
       text-align: center;
       display: block;
       font-size: 1.6rem;
@@ -48,7 +48,7 @@
     justify-content: flex-end;
     display: none;
 
-    @include tablet {
+    @include mobile-only {
       display: block;
     }
   }
